# bellerophon

./: CMakeLists.txt  pieces.qrc
src/: hexboard.cpp  hexboard.h  hexengine.cpp  hexengine.h  mainwindow.cpp  mainwindow.h
ui/: mainwindow.ui
